# nn-option-pricing

./: .gitignore  ISTRUZIONI.md  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
.github/workflows/: docs.yml
data/: code_structure_overview.md
docs/: .gitignore  README.md
docs/source/: command_reference.rst  conf.py  experiment_pipeline.rst  experiments.rst  index.rst  methodology.rst  overview.rst  reproducibility.rst  testing.rst
notes/: code_study_notes_it.md
notes/assets/: mlp_architecture.mmd  module_map.mmd  pipeline_flow.mmd
presentation/: .gitignore  README.md  main.tex  speaker_notes.md
report/: .gitignore  README.md  main.tex  references.bib
report/appendices/: A_python_documentation.tex  B_code_navigation.tex
report/sections/: 01_introduction.tex  01_introduzione.tex  02_financial_mathematical_background.tex  02_framework_teorico.tex  02_theoretical_framework.tex  03_machine_learning_background.tex  03_methodology.tex  03_metodologia.tex  04_dataset_experimental_design.tex  04_implementation.tex  04_implementazione.tex  05_esperimenti.tex  05_experiments.tex  05_methodology.tex  06_results.tex  06_risultati.tex  06_software_implementation.tex  07_conclusioni.tex  07_conclusions.tex  07_experimental_results.tex  (+2 more)
scripts/: benchmark_runtime.py  generate_report_figures.py  run_experiment.py  run_noisy_svr_benchmark.py  run_noisy_targets_experiment.py  run_svr_benchmark.py
tests/: test_black_scholes.py  test_dataset.py  test_model.py  test_monte_carlo.py  test_noise.py  test_noisy_svr.py  test_pipeline.py  test_svr.py
(+41 files in other folders)
